# race

./: .gitignore  CMakeLists.txt  README.md  design.hpp  display.cpp  display.hpp  drawer.cpp  drawer.hpp  interaction.cpp  interaction.hpp  lib.cpp  library.cpp  library.hpp  main.cpp  mycar.hpp  mytrack.cpp  mytrack.hpp  trackObjects.cpp  trackObjects.hpp
headers/: animation.hpp  design.hpp  display.hpp  drawer.hpp  gameMenu.hpp  gameMenuElems.hpp  initLibrary.hpp  interaction.hpp  library.hpp  musicMoment.hpp  mycar.hpp  mytrack.hpp  objectsDefinition.hpp  race.code-workspace  trackObjects.hpp
notes/: creatingProcess.md  mechanism.html  mechanism.md  theoryAnalysis.md  tz.md
src/: display.cpp  drawer.cpp  gameMenu.cpp  gameMenuElems.cpp  initLibrary.cpp  interaction.cpp  library.cpp  main.cpp  musicMoment.cpp  mycar.cpp
tst/: a  a.cpp  main.cpp
understaningTransformation/: CMakeLists.txt  graphicks.cpp  main.cpp  thinkging.md
