cmake_minimum_required(VERSION 3.21)
project(race VERSION 0.1.0 LANGUAGES C CXX)

IF(WIN32)
    find_package(OpenGL REQUIRED)
    find_package(GLUT REQUIRED)
    add_executable(race main.cpp)
    add_library(race_lib STATIC lib.cpp library.hpp)
    add_library(interLib STATIC interaction.cpp interaction.hpp)

    target_link_libraries(race_lib PUBLIC OpenGL::GL GLUT::GLUT)
    target_link_libraries(interLib PUBLIC OpenGL::GL GLUT::GLUT)
    target_link_libraries(race PUBLIC race_lib interLib OpenGL::GL GLUT::GLUT)
ELSE()
    find_package(OpenGL REQUIRED)
    find_package(GLUT REQUIRED)
    find_package(GLEW REQUIRED)
    find_package(X11 REQUIRED)
    add_executable(race main.cpp)
    add_library(race_lib STATIC lib.cpp library.hpp)
    add_library(interLib STATIC interaction.cpp interaction.hpp)

    target_link_libraries(race_lib PUBLIC OpenGL::GL GLUT::GLUT GLEW::GLEW X11::X11)
    target_link_libraries(interLib PUBLIC OpenGL::GL GLUT::GLUT GLEW::GLEW X11::X11)
    target_link_libraries(race PUBLIC race_lib interLib OpenGL::GL GLUT::GLUT GLEW::GLEW X11::X11)
ENDIF()